--- a/templates/dashboard/base_dashboard.html
+++ b/templates/dashboard/base_dashboard.html
@@ -23,9 +23,8 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="dashboard_nav col s2">
+        <div class="dashboard_nav col s2 blue-grey darken-4 yellow-text text-lighten-5">
           {% include 'dashboard/navbar.html' %}
-
         </div>
 
         <div class="content col s10">
