--- a/templates/dashboard/product/product_list.html
+++ b/templates/dashboard/product/product_list.html
@@ -9,13 +9,13 @@
             <span class="title">{{ object.name }}</span>,
                     Actual price: {{ object.price }}
             <div class="secondary-content">
-                <a href="{% url 'dashboard:product-update' slug=object.slug %}">
+                <a href="{% url 'product_panel:product-update' slug=object.slug %}">
                     EDIT
                 </a>|
-                <a href="{% url 'dashboard:product-delete' slug=object.slug %}">
+                <a href="{% url 'product_panel:product-delete' slug=object.slug %}">
                     DELETE
                 </a>|
-                <a href="{% url 'dashboard:product-price-list' number=object.number %}">
+                <a href="{% url 'product_panel:product-price-list' number=object.number %}">
                     PRICING
                 </a>
             </div>
