--- a/templates/dashboard/order/order_list.html
+++ b/templates/dashboard/order/order_list.html
@@ -16,7 +16,7 @@
     <ul class="collection with-header col s9">
         <li class="collection-header"><h4>Order list, status: {{ object_list.0.get_status_display }} </h4></li>
         {%for object in object_list %}
-        <a href="{% url 'dashboard:order-detail' pk=object.pk %}" class="collection-item">
+        <a href="{% url 'order_panel:order-detail' pk=object.pk %}" class="collection-item">
             {{object}}
         </a>
         {% endfor %}
