--- a/templates/dashboard/product/product_list.html
+++ b/templates/dashboard/product/product_list.html
@@ -3,33 +3,31 @@
 
 {% block content %}
 <div class="row">
-    <div class="col s12">
+    <div class="col s12 m12 l3">
         <ul class="collapsible">
             <li>
-                <div class="collapsible-header"><i class="material-icons">keyboard_arrow_down</i>Filtruj wyniki</div>
+                <div class="collapsible-header"><i class="material-icons">keyboard_arrow_down</i>Filter products</div>
                 <div class="collapsible-body">
                     <form class="" action="" method="get">
                         <div class="row">
                             {% for field in filter.form %}
-                                <div class="col s4">
+                                <div class="col s6 m6">
                                     {{ field.errors }}
                                     <label for="{{ field.id_for_label }}">{{ field.name }}</label>
                                     {{ field }}
                                 </div>
                             {% endfor %}
                         </div>
-                    <input type="submit" name="submit" value="Submit" class="">
+                    <input type="submit" name="submit" value="Submit" class="btn">
                     </form>
                 </div>
             </li>
         </ul>
     </div>
-</div>
 
-<div class="row">
-    <div class="col s12">
+    <div class="col s12 m12 l9">
         <ul class="collection with-header">
-            <li class="collection-header lime lighten-3"><h4>Products List</h4></li>
+            <li class="collection-header blue-grey lighten-4"><h4>Products List</h4></li>
             {% for object in object_list %}
             <li class="collection-item">
                 <span class="title">{{ object.name }}</span>,
