moved webstore templates

--- a/templates/webstore/base.html
+++ b/templates/webstore/base.html
@@ -28,7 +28,7 @@
     <div class="container">
 
     <div class="row">
-        {% include 'navbar.html' %}
+        {% include 'webstore/navbar.html' %}
     </div>
     {% block body %}
     {% endblock body %}
