styling for admin navbar

--- a/templates/dashboard/navbar.html
+++ b/templates/dashboard/navbar.html
@@ -2,44 +2,44 @@
 <div style="  min-height: 100vh;width: 100%;">
     <ul class='collapsible blue-grey darken-4 yellow-text text-lighten-5' style="border: 0px; box-shadow: 0px">
         <li>
-          <div class="collapsible-header blue-grey darken-4 yellow-text text-lighten-5">
+          <div class="collapsible-header nav_header">
               <i class="material-icons">view_list</i>Products</div>
           <div class="collapsible-body">
               <div class="collection">
-                  <a href="{% url 'product_panel:product-list' %}" class="collection-item">List all products</a>
-                  <a href="{% url 'product_panel:product-create' %}" class="collection-item">Add product</a>
+                  <a href="{% url 'product_panel:product-list' %}" class="nav_link collection-item">List all products</a>
+                  <a href="{% url 'product_panel:product-create' %}" class="nav_link nav_link collection-item">Add product</a>
               </div>
           </div>
         </li>
         <li>
-          <div class="collapsible-header blue-grey darken-4 yellow-text text-lighten-5">
+          <div class="collapsible-header nav_header">
               <i class="material-icons">attach_money</i>Prices</div>
           <div class="collapsible-body">
               <div class="collection">
-                  <a href="#!" class="collection-item">Review prices</a>
-                  <a href="#!" class="collection-item">List for product</a>
-                  <a href="#!" class="collection-item">Add price</a>
-                  <a href="#!" class="collection-item">Price report</a>
+                  <a href="#!" class="nav_link collection-item">Review prices</a>
+                  <a href="#!" class="nav_link collection-item">List for product</a>
+                  <a href="#!" class="nav_link collection-item">Add price</a>
+                  <a href="#!" class="nav_link collection-item">Price report</a>
             </div>
           </div>
         </li>
         <li>
-          <div class="collapsible-header blue-grey darken-4 yellow-text text-lighten-5">
+          <div class="collapsible-header nav_header">
               <i class="material-icons">shopping_basket</i>Orders</div>
           <div class="collapsible-body">
               <div class="collection">
-                  <a href="{% url 'order_panel:order-list' %}" class="collection-item">Awaiting payment</a>
+                  <a href="{% url 'order_panel:order-list' %}" class="nav_link collection-item">Awaiting payment</a>
             </div>
           </div>
         </li>
         <li>
-          <div class="collapsible-header blue-grey darken-4 yellow-text text-lighten-5">
+          <div class="collapsible-header nav_header">
               <i class="material-icons">monetization_on</i>Payments</div>
           <div class="collapsible-body">
               <div class="collection">
-                  <a href="{% url 'payment_panel:payment-list' status='open' %}" class="collection-item">New</a>
-                  <a href="{% url 'payment_panel:payment-list' status='delayed' %}" class="collection-item">Delayed</a>
-                  <a href="{% url 'payment_panel:payment-list' status='closed' %}" class="collection-item">Closed</a>
+                  <a href="{% url 'payment_panel:payment-list' status='open' %}" class="nav_link collection-item">New</a>
+                  <a href="{% url 'payment_panel:payment-list' status='delayed' %}" class="nav_link collection-item">Delayed</a>
+                  <a href="{% url 'payment_panel:payment-list' status='closed' %}" class="nav_link collection-item">Closed</a>
               </div>
           </div>
         </li>
@@ -48,7 +48,7 @@
               <i class="material-icons">airport_shuttle</i>Deliveries</div>
           <div class="collapsible-body">
               <div class="collection">
-                  <a href="{% url 'delivery_panel:delivery-list' %}" class="collection-item">Delivery list</a>
+                  <a href="{% url 'delivery_panel:delivery-list' %}" class="nav_link collection-item">Delivery list</a>
               </div>
           </div>
         </li>
