--- a/templates/webstore/base.html
+++ b/templates/webstore/base.html
@@ -21,6 +21,7 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="{% static 'style/navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'style/base.css' %}">
 </head>
 
 <body>
