--- a/templates/dashboard/order/order_list.html
+++ b/templates/dashboard/order/order_list.html
@@ -22,5 +22,9 @@
         {% endfor %}
     </ul>
 
+    <div class="col s12">
+        {% include 'dashboard/paginator.html' %}
+    </div>
+
 </div>
 {% endblock content %}
