--- a/templates/dashboard/product/product_list.html
+++ b/templates/dashboard/product/product_list.html
@@ -47,6 +47,10 @@
             {% endfor %}
         </ul>
     </div>
+
+    <div class="col s12">
+        {% include 'dashboard/paginator.html' %}
+    </div>
 </div>
 {% endblock content %}
 
