--- a/dashboard/main/static/style/base_dashboard.css
+++ b/dashboard/main/static/style/base_dashboard.css
@@ -1,17 +1,3 @@
-.nav_link {
-    color: #fffde7 !important;
-    background-color: #263238 !important;
-}
-
-.nav_link:hover {
-    background-color: #455a64 !important;
-}
-
-.nav_header {
-    color: #fffde7;
-    background-color: #263238 ;
-}
-
 .active_page_num {
     background-color: #ffc400;
 }
@@ -19,4 +5,22 @@
 .center {
     margin-left: auto;
     margin-right: auto;
+}
+
+.nav_header {
+    background-color: #263238 ;
+    color: #fffde7;
+}
+
+.nav_link {
+    background-color: #263238 !important;
+    color: #fffde7 !important;
+}
+
+.nav_link:hover {
+    background-color: #455a64 !important;
+}
+
+.product-update-card {
+    padding: 15px;
 }
