--- a/templates/dashboard/navbar.html
+++ b/templates/dashboard/navbar.html
@@ -6,21 +6,10 @@
               <i class="material-icons">view_list</i>Products</div>
           <div class="collapsible-body">
               <div class="collection">
-                  <a href="{% url 'product_panel:product-list' %}" class="nav_link collection-item">List all products</a>
-                  <a href="{% url 'product_panel:product-create' %}" class="nav_link nav_link collection-item">Add product</a>
+                  <a href="{% url 'product_panel:product-list' %}" class="nav_link collection-item">Products List</a>
+                  <a href="{% url 'product_panel:product-create' %}" class="nav_link nav_link collection-item">Add Product</a>
+                  <a href="{% url 'product_panel:category-list' %}" class="nav_link nav_link collection-item">Category List</a>
               </div>
-          </div>
-        </li>
-        <li>
-          <div class="collapsible-header nav_header">
-              <i class="material-icons">attach_money</i>Prices</div>
-          <div class="collapsible-body">
-              <div class="collection">
-                  <a href="#!" class="nav_link collection-item">Review prices</a>
-                  <a href="#!" class="nav_link collection-item">List for product</a>
-                  <a href="#!" class="nav_link collection-item">Add price</a>
-                  <a href="#!" class="nav_link collection-item">Price report</a>
-            </div>
           </div>
         </li>
         <li>
