order list view in panel

--- a/templates/dashboard/navbar.html
+++ b/templates/dashboard/navbar.html
@@ -17,7 +17,8 @@
               <i class="material-icons">shopping_basket</i>Orders</div>
           <div class="collapsible-body">
               <div class="collection">
-                  <a href="{% url 'order_panel:order-list' %}" class="nav_link collection-item">Awaiting payment</a>
+                  <a href="{% url 'order_panel:order-list' %}" 
+                     class="nav_link collection-item">Order List</a>
             </div>
           </div>
         </li>
