--- a/templates/dashboard/order/order_list.html
+++ b/templates/dashboard/order/order_list.html
@@ -7,21 +7,56 @@
     <div class="col s3">
         <h4>Filter orders</h4>
         <form action="" method="GET">
-            {{filter_form.as_p}}
+            {{filter.form.as_p}}
             <input type="submit" value="submit" class="btn">
         </form>
     </div>
 
-    <!-- payment list -->
-    <ul class="collection with-header col s9">
-        <li class="collection-header"><h4>Order list, status: {{ object_list.0.get_status_display }} </h4></li>
-        {%for object in object_list %}
-        <a href="{% url 'order_panel:order-detail' pk=object.pk %}" class="collection-item">
-            {{object}}
-        </a>
-        {% endfor %}
-    </ul>
-
+    <!-- order list -->
+    <div class="col s12 m12 l9">
+        <div class="card">
+            <div class="card-title blue-grey lighten-4">
+                Order List
+            </div>
+            <div class="card-contet">
+                <table class="striped responsive-table">
+                    <thead>
+                        <tr>
+                            <th>Order id</th>
+                            <th>Client</th>
+                            <th>Client email</th>
+                            <th>Items</th>
+                            <th>Value</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for object in object_list %}
+                        <tr>
+                            <td>{{ object.uuid }}</td>
+                            <td>{{ object.user.full_name }}</td>
+                            <td>{{ object.user.email }}</td>
+                            <td>{{ object.num_items }}</td>
+                            <td>{{ object.value }}</td>
+                            <td>
+                                <a href="">
+                                    EDIT
+                                </a>|
+                                <a href="">
+                                    DELETE
+                                </a>|
+                                <a href="">
+                                    DETAILS
+                                </a>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    
     <div class="col s12">
         {% include 'dashboard/paginator.html' %}
     </div>
