--- a/templates/webstore/order/order_list.html
+++ b/templates/webstore/order/order_list.html
@@ -2,15 +2,33 @@
 {% load static %}
 
 {% block body %}
-  <div class="collection with-header">
-    <div class="collection-header"><h4>Your orders</h4></div>
-  {% for object in object_list %}
-    <a class="collection-item" href="{% url 'order:order-detail' uuid=object.uuid %}">
-      Items: {{ object.item_count }}, Value {{ object.value }},
-      Created: {{ object.created }}, Status: {{ object.get_status_display }}
-    </a>
-  {% endfor %}
-</div>
+ <table class="responsive-table"">
+	<thead>
+		<tr>
+			<th>id</th>
+			<th>status</th>
+			<th>created</th>
+			<th>items</th>
+			<th>value</th>
+			<th>action</th>
+		</tr>
+	</thead>
+	<tbody>
+		{% for order in object_list %}
+
+		<tr>
+			<td>{{ order.uuid }}</td>
+			<td>{{ order.status }}</td>
+			<td>{{ order.created }}</td>
+			<td>{{ order.item_count }}</td>
+			<td>{{ order.value }}</td>
+			<td><a href="{% url 'order:order-detail' uuid=order.uuid %}" class="btn">details</a></td>
+		</tr>
+			
+		{% endfor %}
+	</tbody>
+</table>
+{% include 'dashboard/paginator.html' %}
 {% endblock body %}
 
 {% block scripts %}
